--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="buttons">
             <button class="clear">C</button>
             <button class="operator">/</button>
-            <button class="operator">x</button>
+            <button class="operator">*</button>
             <button class="operator">-</button>
             <button class="number">7</button>
             <button class="number">8</button>
